// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="fui-donut__root"
  >
    <div
      class="fui-donut__chartWrapper"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="0"
      >
        <g
          transform="translate(0, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
              id="_Pie_r0first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
              id="_Pie_r0second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
              id="_Pie_r0third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="calloutr1"
    />
    <div
      class="fui-donut__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class="fui-legend__text"
            >
              first
            </div>
          </button>
          <button
            aria-label="second"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class="fui-legend__text"
            >
              second
            </div>
          </button>
          <button
            aria-label="third"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class="fui-legend__text"
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProviderrv"
    dir="ltr"
  >
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="0"
        >
          <g
            transform="translate(0, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="fui-donut-arc__root"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie_r10first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="fui-donut-arc__root"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie_r10second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="fui-donut-arc__root"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie_r10third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="calloutr11"
      />
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart - mouse events Should render callout correctly on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="0"
          >
            <g
              transform="translate(0, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                  id="_Pie_r2efirst20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                  id="_Pie_r2esecond39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                  id="_Pie_r2ethird45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="calloutr2f"
        >
          <div
            class="fui-PopoverSurface"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class="fui-cart__calloutContentRoot"
            >
              <div
                class="fui-cart__calloutDateTimeContainer"
              >
                <div
                  class="fui-cart__calloutContentX"
                >
                   
                </div>
              </div>
              <div
                class="fui-cart__calloutInfoContainer"
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class="fui-cart__calloutBlockContainer"
                >
                  <div
                    class="fui-cart__calloutlegendText"
                  >
                    2020/04/30
                  </div>
                  <div
                    class="fui-cart__calloutContentY"
                    style="color: rgb(229, 229, 229);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="0"
        >
          <g
            transform="translate(0, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="fui-donut-arc__root"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie_r2efirst20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="fui-donut-arc__root"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie_r2esecond39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="fui-donut-arc__root"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie_r2ethird45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="calloutr2f"
      >
        <div
          class="fui-PopoverSurface"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class="fui-cart__calloutContentRoot"
          >
            <div
              class="fui-cart__calloutDateTimeContainer"
            >
              <div
                class="fui-cart__calloutContentX"
              >
                 
              </div>
            </div>
            <div
              class="fui-cart__calloutInfoContainer"
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class="fui-cart__calloutBlockContainer"
              >
                <div
                  class="fui-cart__calloutlegendText"
                >
                  2020/04/30
                </div>
                <div
                  class="fui-cart__calloutContentY"
                  style="color: rgb(229, 229, 229);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart - mouse events Should render customized callout on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="0"
          >
            <g
              transform="translate(0, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                  id="_Pie_r2nfirst20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                  id="_Pie_r2nsecond39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                  id="_Pie_r2nthird45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="calloutr2o"
        >
          <div
            class="fui-PopoverSurface"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class="fui-cart__calloutContentRoot"
            >
              <div
                class="fui-cart__calloutDateTimeContainer"
              >
                <div
                  class="fui-cart__calloutContentX"
                >
                   
                </div>
              </div>
              <div
                class="fui-cart__calloutInfoContainer"
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class="fui-cart__calloutBlockContainer"
                >
                  <div
                    class="fui-cart__calloutlegendText"
                  >
                    2020/04/30
                  </div>
                  <div
                    class="fui-cart__calloutContentY"
                    style="color: rgb(229, 229, 229);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="0"
        >
          <g
            transform="translate(0, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="fui-donut-arc__root"
                d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
                id="_Pie_r2nfirst20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="fui-donut-arc__root"
                d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
                id="_Pie_r2nsecond39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="fui-donut-arc__root"
                d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
                id="_Pie_r2nthird45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="calloutr2o"
      >
        <div
          class="fui-PopoverSurface"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class="fui-cart__calloutContentRoot"
          >
            <div
              class="fui-cart__calloutDateTimeContainer"
            >
              <div
                class="fui-cart__calloutContentX"
              >
                 
              </div>
            </div>
            <div
              class="fui-cart__calloutInfoContainer"
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class="fui-cart__calloutBlockContainer"
              >
                <div
                  class="fui-cart__calloutlegendText"
                >
                  2020/04/30
                </div>
                <div
                  class="fui-cart__calloutContentY"
                  style="color: rgb(229, 229, 229);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart snapShot testing Should elevate all smaller values to minimums 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1sfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1ssecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1sthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1t"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1mfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="auto"
            text-anchor="start"
            x="-1.143083014314768"
            y="1.6411463135214555"
          >
            20k
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1msecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="hanging"
            text-anchor="start"
            x="-1.3603172563291284"
            y="-1.4661299267572407"
          >
            39k
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1mthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="auto"
            text-anchor="end"
            x="1.9541939332494636"
            y="0.42558908732601586"
          >
            45k
          </text>
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1n"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels in percentage format 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1pfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="auto"
            text-anchor="start"
            x="-1.143083014314768"
            y="1.6411463135214555"
          >
            19%
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1psecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="hanging"
            text-anchor="start"
            x="-1.3603172563291284"
            y="-1.4661299267572407"
          >
            38%
          </text>
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1pthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
          <text
            aria-hidden="true"
            class="fui-donut-arc__arcLabel"
            dominant-baseline="auto"
            text-anchor="end"
            x="1.9541939332494636"
            y="0.42558908732601586"
          >
            43%
          </text>
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1q"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0.55,-54.997A55,55,0,0,1,51.396,-19.582L0,0Z"
            id="_Pie_r16first20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M51.777,-18.551A55,55,0,0,1,-22.37,50.245L0,0Z"
            id="_Pie_r16second39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M-23.37,49.788A55,55,0,0,1,-0.55,-54.997L0,0Z"
            id="_Pie_r16third45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr17"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly without color points 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r19first20000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r19second39000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r19third45000"
            opacity="1"
            role="img"
            style="cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1a"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--colorNeutralStroke1);"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--colorNeutralStroke1);"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-borderColor: var(--colorNeutralStroke1);"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; --rect-content-high-contrast: linear-gradient(to right, undefined, undefined);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1hfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1hsecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1hthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1i"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
      style="justify-content: center; flex-wrap: wrap;"
    >
      <div
        class="fui-legend__resizableArea"
        style="display: flex; flex-wrap: wrap; overflow: auto;"
      >
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class="fui-legend__text"
            >
              first
            </div>
          </button>
        </div>
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="second"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class="fui-legend__text"
            >
              second
            </div>
          </button>
        </div>
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="third"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class="fui-legend__text"
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders hideLegend correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="200"
      width="0"
    >
      <g
        transform="translate(0, 100)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1cfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1csecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1cthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1d"
  />
</div>
`;

exports[`DonutChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1efirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1esecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1ethird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1f"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders value inside onf the pie 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <svg
      aria-label="Donut chart example"
      class="fui-donut__chart"
      height="160"
      width="0"
    >
      <g
        transform="translate(0, 80)"
      >
        <g>
          <path
            aria-label="2020/04/30, 20000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1jfirst20000"
            opacity="1"
            role="img"
            style="fill: #E5E5E5; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/20, 39000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1jsecond39000"
            opacity="1"
            role="img"
            style="fill: #0078D4; cursor: default;"
            tabindex="0"
          />
        </g>
        <g>
          <path
            aria-label="2020/04/25, 45000."
            class="fui-donut-arc__root"
            d="M0,0Z"
            id="_Pie_r1jthird45000"
            opacity="1"
            role="img"
            style="fill: #DADADA; cursor: default;"
            tabindex="0"
          />
        </g>
      </g>
    </svg>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="calloutr1k"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
